# Ariadne

./: .env.docker.example  .gitignore  README.md  README.zh-TW.md  compose.override.yaml  compose.yaml
.github/workflows/: docs.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py  models.py
backend/app/ai/: __init__.py  cluster.py  codex_client.py  qa.py  relevance.py  report.py  summarize.py  websearch.py
backend/app/api/: deps.py  jobs_routes.py  routes.py
backend/app/graph/: __init__.py  expander.py  prefilter.py
backend/app/jobs/: __init__.py  manager.py
backend/app/services/: __init__.py  export.py  library.py  scoring.py
backend/app/sources/: __init__.py  arxiv.py  fulltext.py  http.py  ids.py  merge.py  openalex.py  semantic_scholar.py
backend/app/storage/: __init__.py  db.py
backend/tests/: conftest.py  test_api_extra.py  test_api_jobs.py  test_arxiv.py  test_cluster.py  test_codex.py  test_codex_client.py  test_expander.py  test_export.py  test_fulltext.py  test_health.py  test_http_fetcher.py  test_library.py  test_manager.py  test_misc.py  test_qa_tools.py  test_qa_web.py  test_scoring.py  test_sources.py  test_sources_api.py  test_websearch.py
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md  usage.md
docs/i18n/zh-Hant/: code.json
docs/src/css/: custom.css
web/: .dockerignore  .env.example  Dockerfile  nuxt.config.ts  package-lock.json  package.json
web/app/: app.vue  types.ts
(+18 files in other folders)
