[project]
name = "ariadne-backend"
version = "0.1.0"
description = "Citation-graph builder with Codex-powered relevance filtering and progressive reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sse-starlette>=2.1",
    "aiosqlite>=0.20",
    "ddgs>=9.0",
    "pypdf>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.uv]
package = false

[tool.ruff]
line-length = 100
